re-ran code in hopes of updating perks